<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imitationGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/imitation_game" />

        <TextView
            style="@style/secondTitle"
            android:id="@+id/aPropos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aPropos"/>

        <LinearLayout
            style="@style/infoLinearLayout"
            android:weightSum="100">

            <TextView
                android:id="@+id/title"
                android:layout_weight="30"
                style="@style/thirdTitle"
                android:text="@string/title"/>

            <TextView
                android:id="@+id/movieTitle"
                android:layout_weight="70"
                style="@style/text"
                android:text="@string/imitationTitle"/>
        </LinearLayout>

        <LinearLayout
            style="@style/infoLinearLayout"
            android:weightSum="100">

            <TextView
                android:id="@+id/originalTitle"
                style="@style/thirdTitle"
                android:layout_weight="30"
                android:text="@string/originalTitle"/>

            <TextView
                android:id="@+id/movieOriginalTitle"
                style="@style/text"
                android:layout_weight="70"
                android:text="@string/imitationOriginalTitle"/>
        </LinearLayout>

        <LinearLayout
            style="@style/infoLinearLayout"
            android:weightSum="100">

            <TextView
                android:id="@+id/description"
                android:layout_weight="30"
                style="@style/thirdTitle"
                android:text="@string/description" />

            <TextView
                android:id="@+id/movieDescription"
                android:layout_weight="70"
                style="@style/text"
                android:text="@string/imitationDescription"/>
        </LinearLayout>

        <LinearLayout
            style="@style/infoLinearLayout"
            android:weightSum="100">

            <TextView
                android:id="@+id/keyWords"
                style="@style/thirdTitle"
                android:layout_weight="30"
                android:text="@string/keyWords" android:layout_width="0dp" />

            <TextView
                android:id="@+id/movieKeyWords"
                style="@style/text"
                android:layout_weight="70"
                android:text="@string/imitationKeyWord"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/interactLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenuBackground"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/btnShare"
                style="@style/iconeLinearLayout"
                android:layout_weight="1"
                android:background="@drawable/rounded_button">

                <ImageView
                    android:id="@+id/iconShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_share_black_24dp" />

                <TextView
                    android:id="@+id/textShare"
                    style="@style/text"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shareBtn" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnComment"
                style="@style/iconeLinearLayout"
                android:layout_weight="1"
                android:background="@drawable/rounded_button">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_forum_black_24dp"
                    android:maxHeight="2dp"/>

                <TextView
                    style="@style/text"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commentBtn" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnLike"
                style="@style/iconeLinearLayout"
                android:layout_weight="1"
                android:background="@drawable/rounded_button">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_thumb_up_white_24dp" />

                <TextView
                    android:id="@+id/textLike"
                    style="@style/text"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likeBtn" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/commentList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="50dp">

            <TextView
                android:id="@+id/defaultComment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:background="@color/colorBackgroungComments"
                android:textColor="@color/colorText"
                android:text="@string/defaultComment"
                android:textStyle="bold"
                android:textSize="20sp"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/comment_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="invisible">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMenuBackground"
        android:weightSum="100"
        android:layout_alignParentBottom="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:hint="@string/hintComment"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"/>

        <ImageView
            android:id="@+id/iconSend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:src="@drawable/ic_send_black_24dp"/>
    </LinearLayout>


    <com.example.chris.sharemovie.widgets.HeaderView
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:backTitle="@string/backTitle"
        app:mainTitle="@string/imitationTitle">

    </com.example.chris.sharemovie.widgets.HeaderView>

</RelativeLayout>